[package]
name = "tokio-mesh-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2", features = ["v4"] }
warp = { version = "0.3" }
env_logger = "0.10"
